# Cinder-NVP

./: .gitignore  LICENSE  README.md
blocks/NVPathTextCinder/include/: NVPTextBox.h
blocks/NVPathTextCinder/src/: NVPFont.cpp  NVPTextBox.cpp
samples/NVP3DTextSample/src/: NVPathTextApp.cpp
samples/NVP3DTextSample/vc2012/: NVPathText.vcxproj  NVPathText.vcxproj.filters
samples/NVP3DTextTransformSample/include/UI/: Bounds.h  TouchRect.h
samples/NVP3DTextTransformSample/include/UI/Node/: Node.h
samples/NVP3DTextTransformSample/include/UI/Nodes/: NodeNVPTextBox3D.h  NodeRectangle.h  NodeText.h  NodeText3D.h
samples/NVP3DTextTransformSample/include/Utils/: Globals.h
samples/NVP3DTextTransformSample/src/: NVP3DTextTransformSample.cpp
samples/NVP3DTextTransformSample/src/UI/: Bounds.cpp
samples/NVP3DTextTransformSample/src/UI/Node/: Node.cpp
samples/NVP3DTextTransformSample/src/UI/Nodes/: NodeNVPTextBox3D.cpp  NodeRectangle.cpp  NodeText.cpp  NodeText3D.cpp
samples/NVP3DTextTransformSample/src/Utils/: Globals.cpp
samples/NVP3DTextTransformSample/vc2012/: NVP3DTextTransformSample.sln  NVP3DTextTransformSample.vcxproj  NVP3DTextTransformSample.vcxproj.filters
samples/NVPBasicTextSample/src/: NVPBasicTextSampleApp.cpp
samples/NVPBasicTextSample/vc2012/: NVPBasicTextSample.sln  NVPBasicTextSample.vcxproj  NVPBasicTextSample.vcxproj.filters
samples/NVPBasicTextSample/vc2012/Debug/: NVPBasicTextSample.lastbuildstate
samples/NVPBasicTextSample/vc2012/Release/: NVPBasicTextSample.lastbuildstate
samples/NVPBasicTextSample/vc2013/: NVPBasicTextSample.vcxproj  NVPBasicTextSample.vcxproj.filters
samples/NVPBasicTextSample/vc2013/NVPBasicTextSample/src/: NVPBasicTextSampleApp.cpp
samples/NVPBasicTextSample/vc2013/NVPBasicTextSample/vc2013/: NVPBasicTextSample.sln  NVPBasicTextSample.vcxproj  NVPBasicTextSample.vcxproj.filters
samples/NVPText/src/: NVPathTextApp.cpp
samples/NVPText/vc2012/: NVPathText.sln  NVPathText.vcxproj  NVPathText.vcxproj.filters
samples/NVPText/vc2012/Debug/: NVPathText.lastbuildstate
samples/NVPTextStressSample/: CMakeLists.txt  CMakeLists.txt~  CMakelists.txt~  GNUmakefile
samples/NVPTextStressSample/include/: Globals.h
samples/NVPTextStressSample/include/Cinder-NVP/: NVPTextBoxTest.h  NVPTextBoxTest.h~
samples/NVPTextStressSample/linux/release/: CMakeCache.txt  Makefile  NVPTextStressSampleLinux.cbp  cmake_install.cmake
samples/NVPTextStressSample/src/: Globals.cpp  NVPTextStressSample.cpp  NVPTextStressSample.cpp~
samples/NVPTextStressSample/src/Cinder-NVP/: NVPTextBoxTest.cpp  NVPTextBoxTest.cpp~
samples/NVPTextStressSample/src/cinder/app/: AppImplMswRendererGl.cpp
samples/NVPTextStressSample/vc2012/: NVPTextStressSample.sln  NVPTextStressSample.vcxproj  NVPTextStressSample.vcxproj.filters
src/: NVPathTextApp.cpp
src/include/: NVPFont.h  NVPInit.h  NVPTextBox.h
src/include/cinder/gl/: GLee.h
src/src/: NVPFont.cpp  NVPFont.cpp~  NVPInit.cpp  NVPTextBox.cpp  NVPTextBox.cpp~
src/src/cinder/gl/: GLee.c  GLee.c~
vc2012/: NVPathText.vcxproj  NVPathText.vcxproj.filters
